# KoralHub

./: .gitignore  README.md  imgui.ini  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  imgui.ini  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  builder.rs  collection.rs  commands.rs  dev_server.rs  framework.rs  git.rs  ide.rs  lib.rs  main.rs  model.rs  paths.rs  project.rs  scaffold.rs  settings.rs
