[package]
name = "koral-hub"
version = "0.1.0"
description = "Koral Hub — create, manage and run Koral projects"
authors = ["radue"]
edition = "2021"

# The Rust core is compiled as a library so the same code can back both the desktop
# binary (main.rs) and, later, mobile entry points.
[lib]
name = "koral_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"                                                      # per-OS data/home dirs
# rustls-tls avoids a system OpenSSL build dependency for downloads.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
zip = "2"                                                       # unpack SDK archives

# --- Coming soon (uncomment when wiring up labs) ---
# git2 = "0.19"          # native clone/pull for labs + git-hosted frameworks
