[package]
name = "koral-hub"
version = "0.2.1"
description = "Koral Hub — create, manage and run Koral projects"
authors = ["radue"]
edition = "2021"

# The Rust core is compiled as a library so the same code can back both the desktop
# binary (main.rs) and, later, mobile entry points.
[lib]
name = "koral_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"                                                      # per-OS data/home dirs
# rustls-tls avoids a system OpenSSL build dependency for downloads.
# "json" is used to read the GitHub releases API when listing what is installable.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
# SDK archives are .tar.gz on Linux/macOS and .zip on Windows — the release workflow emits
# whichever is native to the platform, so the Hub has to be able to open both.
zip = "2"
tar = "0.4"
flate2 = "1"
tauri-plugin-dialog = "2"
# Native git (init on create, clone on import, status for the cards). libgit2 is vendored and
# statically linked so the Hub needs no system `git` binary — the same "owns its dependencies"
# stance as the rest of the Hub. SSH is left out; the import flow targets HTTPS remotes.
#
# HTTPS transport differs by OS: on Unix libgit2 uses OpenSSL (vendored in the target section
# below so there's no libssl runtime dependency), while on Windows it uses the built-in WinHTTP.
# Vendoring OpenSSL only for Unix keeps the Windows build from having to compile OpenSSL from
# source (Perl/NASM) for a transport it never uses.
git2 = { version = "0.19", default-features = false, features = ["https", "vendored-libgit2"] }

# OpenSSL, vendored, is libgit2's HTTPS backend on Unix. Windows uses WinHTTP instead, so OpenSSL
# is neither pulled in nor built there. Cargo unions these features with the base git2 above.
[target.'cfg(unix)'.dependencies]
git2 = { version = "0.19", default-features = false, features = ["vendored-openssl"] }
